--- a/SportAcademyManager.Data/SportAcademyManager.Data.csproj
+++ b/SportAcademyManager.Data/SportAcademyManager.Data.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-preview.5.20278.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SportAcademyManager.Domain\SportAcademyManager.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
